Version 8.6 (October 31, 2017)	
   •Redesigned splash screen  
   •Add Space theme
   •Tweaked multiple themes      
Version 8.5 (October 13, 2017)	
   •Help file included   
   •Minor changes to splash screen
   •Automatically fill in title and description on dictionary HTML generator
   •Notebook panel re-design   
   •Language field in notebook panel
   •'Snow' theme now has a white background to match Windows 10
   •Multiple dialogs layouts have been tweaked
   •Dialogs now match theme
   •Fixed bug where decimal separators other than "." would throw errors
   •Re-design update dialog and fix buttons not working
Version 8.2 (September 30, 2017)
   •Find words in dictionary   
   •Color panel for quick access to font/highlight colors   
   •Check for updates at startup now on by default    
   •Fixed typo on style dialog   
   •Fixed accents remaining after Accents dialog closes and re-opens   
   •Revised look of color buttons   
   •Automatically open generated HTML file on completion   
   •Replace most StylizedButtons with native buttons   
Version 8.1 (September 16, 2017)
   •Export dictionary to HTML
   •Redesigned accent window
   •Multiple accents can be selected for a single character
   •Snow & Desert theme
   •Improved look of character tooltips
   •Default theme is now "Snow"
   •Find/Replace now matches theme
   •Window background now matches theme
   •Fixed rendering of vertical toolbars
   •Fixed mislabeled tooltips
   •Fixed bug where dictionary wouldn't show up on when re-opening
   •Fixed bug where some context menu items would crash the program
   •Fixed bug where CTRL+Click to add character to custom characters would insert it into document
   •Fixed missing '0' value for indentation dropdown
   •Removed excessive whitespace around text art
Version 8.0 (September 11, 2017)
   •Support for 4k screens
   •Support for themes - Ice(Default), Night, Luna, Olive
   •Import dictionaries from CSV
   •Page count next to word and character count   