@@ -133,6 +133,7 @@ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND 
     <value>Version 8.6 (October 31, 2017)	
    •Redesigned splash screen  
    •Add Space theme
+   •Theme saved on shutdown
    •Tweaked multiple themes      
 Version 8.5 (October 13, 2017)	
    •Help file included   
