@@ -74,7 +74,7 @@
           <dsig:Transform Algorithm="urn:schemas-microsoft-com:HashTransforms.Identity" />
         </dsig:Transforms>
         <dsig:DigestMethod Algorithm="http://www.w3.org/2000/09/xmldsig#sha256" />
-        <dsig:DigestValue>dx1h68Q3e8iiXXYypdgzR4cBAh8MViceOL0z1iojbG8=</dsig:DigestValue>
+        <dsig:DigestValue>tA98QEMN+I63Df2VCEXMC5p2nFns+l5mcz5din83bOc=</dsig:DigestValue>
       </hash>
     </dependentAssembly>
   </dependency>
