@@ -14,7 +14,7 @@
           <dsig:Transform Algorithm="urn:schemas-microsoft-com:HashTransforms.Identity" />
         </dsig:Transforms>
         <dsig:DigestMethod Algorithm="http://www.w3.org/2000/09/xmldsig#sha256" />
-        <dsig:DigestValue>ztbcHumTIynzF8oXRSLgnXMy9+CFziHErwjnWuuzRSY=</dsig:DigestValue>
+        <dsig:DigestValue>qM+FdmHZjYngILS/k5RsrzXvIOMMmrO8sAJYuHE5a7M=</dsig:DigestValue>
       </hash>
     </dependentAssembly>
   </dependency>
